<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.haider.tipcalc.TipCalc" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billAmtTV"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/billAmtET"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_toRightOf="@+id/textView1"
        android:inputType="numberDecimal"
        android:text="@string/billAmtET" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billAmtET"
        android:text="@string/finalBillTV"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/finalAmtET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/billAmtET"
        android:layout_below="@+id/billAmtET"
        android:ems="4"
        android:inputType="numberDecimal" />

    <SeekBar
        android:id="@+id/tipSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/finalAmtET"
        android:progress="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/billAmtET"
        android:layout_alignBottom="@+id/billAmtET"
        android:layout_toRightOf="@+id/billAmtET"
        android:text="@string/tipAmtTV"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/tipAmtET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tipSeekBar"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/tipAmtET" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/finalAmtET"
        android:text="@string/typeTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/friendlyCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="16dp"
        android:text="@string/friendlyTV" />

    <CheckBox
        android:id="@+id/opinionsCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/friendlyCB"
        android:layout_alignBottom="@+id/friendlyCB"
        android:layout_centerHorizontal="true"
        android:text="@string/opinionsTV" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendlyCB"
        android:layout_below="@+id/friendlyCB"
        android:layout_marginTop="20dp"
        android:text="@string/foodTV"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/foodRG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="18dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/goodFoodRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/goodFoodTV" />

        <RadioButton
            android:id="@+id/okFoodRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/okFoodTV" />

        <RadioButton
            android:id="@+id/averageFoodRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/averageFoodTV" />
    </RadioGroup>

</RelativeLayout>